@@ -301,6 +301,20 @@ class Smarty
     var $default_modifiers        = array();
 
     /**
+     * This is the resource type to be used when not specified
+	 * at the beginning of the resource path. examples:
+	 * $smarty->display('file:index.tpl');
+	 * $smarty->display('db:index.tpl');
+	 * $smarty->display('index.tpl'); // will use default resource type
+	 * {include file="file:index.tpl"}
+	 * {include file="db:index.tpl"}
+	 * {include file="index.tpl"} {* will use default resource type *}
+     *
+     * @var array
+     */
+    var $default_resource_type    = 'file';	
+	
+    /**
      * The function used for cache file handling. If not set, built-in caching is used.
      * 
      * @var null|string function name
